--- a/test_maps/vi_app_test/vi_map/sensors.yaml
+++ b/test_maps/vi_app_test/vi_map/sensors.yaml
@@ -43,15 +43,15 @@ ncameras:
             - -2.220446049250313e-16
             - -0.9749435239382782
             - 0.2224525233185989
-            - 0.001200000000000007
+            - 0.0012
             - -1
             - 1.110223024625157e-16
             - -1.387778780781446e-17
-            - -0.05899699999999997
+            - -0.05899699999999998
             - -1.387778780781446e-17
             - -0.2224525233185989
             - -0.9749435239382782
-            - -0.001572500000000001
+            - -0.001572500000000002
             - 0
             - 0
             - 0
@@ -63,3 +63,4 @@ mission_sensors_associations:
 mission_ncamera_associations:
   - mission_id: c7957efb9cf29d4874676106d6beb551
     ncamera_id: 4809a0c7e7ca060b45856a9a18040434
+mission_optional_ncamera_associations: ~
