--- a/cmake/maplab-import-test-maps.cmake.in
+++ b/cmake/maplab-import-test-maps.cmake.in
@@ -1,8 +1,13 @@
 SET(MAPLAB_IMPORT_TEST_MAPS "test_maps")
+if(${CMAKE_CURRENT_LIST_DIR} MATCHES "devel")
+  set(MAPLAB_TEST_DATA_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
+else()
+  set(MAPLAB_TEST_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/..")
+endif()
 add_custom_target(${MAPLAB_IMPORT_TEST_MAPS})
 add_custom_command(TARGET ${MAPLAB_IMPORT_TEST_MAPS}
                    COMMAND rm -rf test_maps &&
-                   cp -r @CMAKE_CURRENT_SOURCE_DIR@/test_maps .)
+                   cp -r ${MAPLAB_TEST_DATA_DIR}/test_maps .)
 
 function(maplab_import_test_maps test_target)
   add_dependencies(${test_target} ${MAPLAB_IMPORT_TEST_MAPS})
