--- a/cmake/maplab-test-data.cmake.in
+++ b/cmake/maplab-test-data.cmake.in
@@ -1,1 +1,5 @@
-set(MAPLAB_TEST_DATA_DIR @CMAKE_CURRENT_SOURCE_DIR@)
+if(${CMAKE_CURRENT_LIST_DIR} MATCHES "devel")
+  set(MAPLAB_TEST_DATA_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
+else()
+  set(MAPLAB_TEST_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/..")
+endif()
