Better develspace detection

--- a/cmake/maplab-import-test-maps.cmake.in
+++ b/cmake/maplab-import-test-maps.cmake.in
@@ -1,8 +1,8 @@
 SET(MAPLAB_IMPORT_TEST_MAPS "test_maps")
-if(${CMAKE_CURRENT_LIST_DIR} MATCHES "devel")
+if("@DEVELSPACE@" STREQUAL "TRUE")
   set(MAPLAB_TEST_DATA_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
 else()
-  set(MAPLAB_TEST_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/..")
+  set(MAPLAB_TEST_DATA_DIR "@CMAKE_INSTALL_PREFIX@/@CATKIN_PACKAGE_SHARE_DESTINATION@")
 endif()
 add_custom_target(${MAPLAB_IMPORT_TEST_MAPS})
 add_custom_command(TARGET ${MAPLAB_IMPORT_TEST_MAPS}
