--- a/cmake/maplab-test-data.cmake.in
+++ b/cmake/maplab-test-data.cmake.in
@@ -1,5 +1,5 @@
-if(${CMAKE_CURRENT_LIST_DIR} MATCHES "devel")
+if("@DEVELSPACE@" STREQUAL "TRUE")
   set(MAPLAB_TEST_DATA_DIR "@CMAKE_CURRENT_SOURCE_DIR@")
 else()
-  set(MAPLAB_TEST_DATA_DIR "${CMAKE_CURRENT_LIST_DIR}/..")
+  set(MAPLAB_TEST_DATA_DIR "@CMAKE_INSTALL_PREFIX@/@CATKIN_PACKAGE_SHARE_DESTINATION@")
 endif()
