--- a/test_maps/lc_app_test/vi_map/sensors.yaml
+++ b/test_maps/lc_app_test/vi_map/sensors.yaml
@@ -1,69 +1,74 @@
 sensors:
-  - id: b91fa7a1ffffffff0100000000000000
-    sensor_type: IMU
-    hardware_id: imu0
-    sigmas:
-      gyro_noise_density: 0.0001
-      gyro_bias_random_walk_noise_density: 0.0001
-      acc_noise_density: 0.004
-      acc_bias_random_walk_noise_density: 0.004
-    saturation_accel_max_mps2: 150
-    saturation_gyro_max_radps: 7.5
-    gravity_magnitude_mps2: 9.808083883386614
-ncameras:
-  - label: 23016 turtlebot factory
-    id: 412eab8e4058621f7036b5e765dfe813
+  - id: 0fbb7dceb7644143e47938043f60b136
+    sensor_type: NCAMERA
+    topic: ""
+    description: Sensor stick camera setup
     cameras:
       - camera:
-          label: unnamed camera
-          id: 54812562fa109c40fe90b29a59dd7795
+          id: 9be7b5000f15adb3c0da8ac6b729ee05
+          sensor_type: CAMERA
+          topic: /VersaVIS/cam0
+          description: Color camera
           line-delay-nanoseconds: 0
-          image_height: 480
-          image_width: 752
+          image_height: 540
+          image_width: 720
           type: pinhole
           intrinsics:
             rows: 4
             cols: 1
             data:
-              - 472.2863830700696
-              - 470.8375968434678
-              - 368.8316828103749
-              - 232.2368870696565
+              - 288.408207812205
+              - 288.2231103613684
+              - 362.6636545997341
+              - 274.6270363549055
           distortion:
             type: equidistant
             parameters:
               rows: 4
               cols: 1
               data:
-                - -0.005740195474458931
-                - 0.02878252863739417
-                - -0.04010621197185408
-                - 0.02008469575876223
+                - 0.007267463899378662
+                - -0.003416892997276599
+                - 0.0005955948706648939
+                - -0.0004223559610193976
         T_B_C:
           rows: 4
           cols: 4
           data:
-            - 0.9999218482505452
-            - -0.01241688973740762
-            - -0.001455417624833115
-            - 0.03661313999999618
-            - 0.01242827026330047
-            - 0.9998900372788196
-            - 0.008090206970351213
-            - -0.01027102000001149
-            - 0.001354802375246977
-            - -0.008107663030110427
-            - 0.99996621458463
-            - -0.006544660000003794
-            - 0
-            - 0
-            - 0
-            - 1
-mission_sensors_associations:
-  - mission_id: e53886ecffffffff0100000000000000
-    sensor_ids:
-      - sensor_id: b91fa7a1ffffffff0100000000000000
-mission_ncamera_associations:
-  - mission_id: e53886ecffffffff0100000000000000
-    ncamera_id: 412eab8e4058621f7036b5e765dfe813
-mission_optional_ncamera_associations: ~
+            - [-0.9999237459683412, -0.00887049095954965, -0.008591661002224566, -0.0342271585535882]
+            - [-0.008578055805414566, -0.001570668851441637, 0.9999619742560005, 0.05631226626235313]
+            - [-0.008883648306849611, 0.9999594228714962, 0.001494457515136882, 0.05622655837534755]
+            - [0, 0, 0, 1]
+  - id: 5d2fcf479caf7592b35518478a2fe08f
+    sensor_type: IMU
+    topic: /VersaVIS/imu
+    description: ADIS IMU
+    sigmas:
+      gyro_noise_density: 0.005
+      gyro_bias_random_walk_noise_density: 4e-06
+      acc_noise_density: 0.01
+      acc_bias_random_walk_noise_density: 0.0002
+    saturation_accel_max_mps2: 150
+    saturation_gyro_max_radps: 7.5
+    gravity_magnitude_mps2: 9.808083883386614
+extrinsics:
+  - sensor_id: 0fbb7dceb7644143e47938043f60b136
+    base_sensor_id: 5d2fcf479caf7592b35518478a2fe08f
+    T_B_S:
+      rows: 4
+      cols: 4
+      data:
+        - [-0.9999237459683412, -0.00887049095954965, -0.008591661002224566, -0.0342271585535882]
+        - [-0.008578055805414566, -0.001570668851441637, 0.9999619742560005, 0.05631226626235313]
+        - [-0.008883648306849611, 0.9999594228714962, 0.001494457515136882, 0.05622655837534755]
+        - [0, 0, 0, 1]
+  - sensor_id: 5d2fcf479caf7592b35518478a2fe08f
+    base_sensor_id: 5d2fcf479caf7592b35518478a2fe08f
+    T_B_S:
+      rows: 4
+      cols: 4
+      data:
+        - [1, 0, 0, 0]
+        - [0, 1, 0, 0]
+        - [0, 0, 1, 0]
+        - [0, 0, 0, 1]
