--- a/test_maps/vi_app_test/vi_map/sensors.yaml
+++ b/test_maps/vi_app_test/vi_map/sensors.yaml
@@ -10,36 +10,35 @@ sensors:
     saturation_accel_max_mps2: 150
     saturation_gyro_max_radps: 7.5
     gravity_magnitude_mps2: 9.808083883386614
-ncameras:
-  - label: Tango camera
-    id: 4809a0c7e7ca060b45856a9a18040434
-    cameras:
-      - camera:
-          label: unnamed camera
-          id: fb35c057f9845c71aa169aa26f86f607
-          line-delay-nanoseconds: 0
-          image_height: 480
-          image_width: 640
-          type: pinhole
-          intrinsics:
-            rows: 4
-            cols: 1
-            data:
-              - 253.24
-              - 253.949
-              - 317.661
-              - 248.708
-          distortion:
-            type: fisheye
-            parameters:
-              rows: 1
-              cols: 1
-              data:
-                - 0.920805
-        T_B_C:
-          rows: 4
-          cols: 4
+  - id: 4809a0c7e7ca060b45856a9a18040434
+    sensor_type: Camera
+    hardware_id: cam0
+    label: unnamed camera
+    id: fb35c057f9845c71aa169aa26f86f607
+    line_delay_nanoseconds: 0
+    index: 0
+    image_height: 480
+    image_width: 640
+    type: pinhole
+    intrinsics:
+       rows: 4
+       cols: 1
+       data:
+          - 253.24
+          - 253.949
+          - 317.661
+          - 248.708
+    distortion:
+       type: fisheye
+       parameters:
+          rows: 1
+          cols: 1
           data:
+             - 0.920805
+    T_B_C:
+       rows: 4
+       cols: 4
+       data:
             - -2.220446049250313e-16
             - -0.9749435239382782
             - 0.2224525233185989
@@ -60,7 +59,8 @@ mission_sensors_associations:
   - mission_id: c7957efb9cf29d4874676106d6beb551
     sensor_ids:
       - sensor_id: 7301e8e2ffffffff0100000000000000
-mission_ncamera_associations:
-  - mission_id: c7957efb9cf29d4874676106d6beb551
-    ncamera_id: 4809a0c7e7ca060b45856a9a18040434
+      - sensor_id: 4809a0c7e7ca060b45856a9a18040434
 mission_optional_ncamera_associations: ~
+sensor_system:
+  sensor_system_id: 7301e8e2ffffffff0100000000000000
+  reference_sensor_id: 4809a0c7e7ca060b45856a9a18040434
