--- a/test_maps/vi_app_test/vi_map/sensors.yaml
+++ b/test_maps/vi_app_test/vi_map/sensors.yaml
@@ -35,26 +35,6 @@ sensors:
           cols: 1
           data:
              - 0.920805
-    T_B_C:
-       rows: 4
-       cols: 4
-       data:
-            - -2.220446049250313e-16
-            - -0.9749435239382782
-            - 0.2224525233185989
-            - 0.0012
-            - -1
-            - 1.110223024625157e-16
-            - -1.387778780781446e-17
-            - -0.05899699999999998
-            - -1.387778780781446e-17
-            - -0.2224525233185989
-            - -0.9749435239382782
-            - -0.001572500000000002
-            - 0
-            - 0
-            - 0
-            - 1
 mission_sensors_associations:
   - mission_id: c7957efb9cf29d4874676106d6beb551
     sensor_ids:
@@ -62,5 +42,29 @@ mission_sensors_associations:
       - sensor_id: 4809a0c7e7ca060b45856a9a18040434
 mission_optional_ncamera_associations: ~
 sensor_system:
-  sensor_system_id: 7301e8e2ffffffff0100000000000000
-  reference_sensor_id: 4809a0c7e7ca060b45856a9a18040434
+  sensor_system_id: 1350719effffffff0300000000000000
+  reference_sensor_id: 7301e8e2ffffffff0100000000000000
+  sensor_id_with_extrinsics:
+    - sensor_id: 4809a0c7e7ca060b45856a9a18040434
+      extrinsics:
+        extrinsics_type: transformation
+        T_R_S:
+          rows: 4
+          cols: 4
+          data:
+               - -2.220446049250313e-16
+               - -0.9749435239382782
+               - 0.2224525233185989
+               - 0.0012
+               - -1
+               - 1.110223024625157e-16
+               - -1.387778780781446e-17
+               - -0.05899699999999998
+               - -1.387778780781446e-17
+               - -0.2224525233185989
+               - -0.9749435239382782
+               - -0.001572500000000002
+               - 0
+               - 0
+               - 0
+               - 1
